feat: Home view UI added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <meta name="theme-color" content="oklch(87% 0 0 / 80%)" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet" />
     <title>Tictactoe Bolt</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-base-color font-comfortaa">
+    <div id="app" class="text-text-color relative flex min-h-lvh flex-col"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
